// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InboxScreen Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="page lists-show"
    >
      <nav>
        <h1
          class="title-page"
        >
          <span
            class="title-wrapper"
          >
            Taskbox
          </span>
        </h1>
      </nav>
       
      <div>
         
         
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-1"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-1"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-2"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-2"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-3"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-3"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-4"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-4"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots InboxScreen Error 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="page lists-show"
    >
      <div
        class="wrapper-message"
      >
        <span
          class="icon-face-sad"
        />
         
        <div
          class="title-message"
        >
          Oh no!
        </div>
         
        <div
          class="subtitle-message"
        >
          Something went wrong
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots InboxScreen With Interactions 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="page lists-show"
    >
      <nav>
        <h1
          class="title-page"
        >
          <span
            class="title-wrapper"
          >
            Taskbox
          </span>
        </h1>
      </nav>
       
      <div>
         
         
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-1"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-1"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-2"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-2"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-3"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-3"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        <div
          class="list-item TASK_INBOX"
        >
          <label
            class="checkbox"
          >
            <input
              disabled=""
              name="checked"
              type="checkbox"
            />
             
            <span
              aria-label="archiveTask-4"
              class="checkbox-custom"
            />
          </label>
           
          <div
            class="title"
          >
            <input
              placeholder="Input title"
              readonly=""
              type="text"
            />
          </div>
           
          <div
            class="actions"
          >
            <a
              href="/"
            >
              <span
                aria-label="pinTask-4"
                class="icon-star"
              />
            </a>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots PureTaskList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
     
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-2"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-2"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-3"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-3"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-4"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-4"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-5"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-5"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-6"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-6"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots PureTaskList Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <div
      class="list-items"
    >
      <div
        class="wrapper-message"
      >
        <span
          class="icon-check"
        />
         
        <div
          class="title-message"
        >
          You have no tasks
        </div>
         
        <div
          class="subtitle-message"
        >
          Sit back and relax
        </div>
      </div>
    </div>
     
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots PureTaskList Loading 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="list-items"
    >
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
       
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
       
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
       
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
       
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
       
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
    </div>
     
     
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots PureTaskList With Pinned Tasks 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
     
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-6"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-6"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-2"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-2"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-3"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-3"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-4"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-4"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-5"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-5"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots Task Archived 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_ARCHIVED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    />
  </div>
</section>
`;

exports[`Storyshots Task Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          aria-label="pinTask-1"
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots Task Pinned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_PINNED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          aria-label="pinTask-1"
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;
